src/core/Claroline/PluginBundle/Tests/stub/plugin/Invalid/UnexpectedRoutingPrefix_2/InvalidUnexpectedRoutingPrefix_2.php
<?php

namespace Invalid\UnexpectedRoutingPrefix_2;

use Claroline\PluginBundle\AbstractType\ClarolinePlugin;

class InvalidUnexpectedRoutingPrefix_2 extends ClarolinePlugin
{
    public function getPrefix()
    {
        return '';
    }
}